[package]
name = "local_async_utils"
version = "0.2.6"
edition = "2024"
authors = ["Mikhail Vasilyev <mikail.vasilyev@gmail.com>"]
description = "Utilities for single-threaded async programming"
repository = "https://github.com/DanglingPointer/local_async_utils"
license = "Apache-2.0"
categories = ["asynchronous", "data-structures"]
exclude = ["/tests"]

[features]
tokio-time = ["dep:tokio"]

[dependencies]
futures = "0.3.31"
log = "0.4.27"
tokio = { version = "1.45.1", optional = true, features = ["time"] }

[dev-dependencies]
static_assertions = "1.1.0"
tokio-test = "0.4.4"

[profile.dev]
opt-level = 3
