[package]
name = "local_async_utils"
version = "0.2.12"
edition = "2024"
authors = ["Mikhail Vasilyev <mikail.vasilyev@gmail.com>"]
description = "Utilities for single-threaded async programming"
repository = "https://github.com/DanglingPointer/local_async_utils"
license = "Apache-2.0"
categories = ["asynchronous", "data-structures"]
exclude = ["/tests"]

[features]
tokio = ["dep:tokio"]

[dependencies]
futures = "0.3"
log = "0.4"
tokio = { version = "1.48", optional = true, features = ["time"] }

[dev-dependencies]
static_assertions = "1.1"
tokio-test = "0.4"
tokio = { version = "1.48", features = ["time", "io-util"] }

[profile.dev]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
